extracting language values